crates/swc_ecma_react_compiler/tests/fixtures/upstream/error.todo-invalid-jsx-in-catch-in-outer-try-with-finally/error.txt
Found 1 error:

Todo: (BuildHIR::lowerStatement) Handle TryStatement without a catch clause

error.todo-invalid-jsx-in-catch-in-outer-try-with-finally.ts:6:2
   4 | function Component(props) {
   5 |   let el;
>  6 |   try {
     |   ^^^^^
>  7 |     let value;
     | ^^^^^^^^^^^^^^
>  8 |     try {
     | ^^^^^^^^^^^^^^
>  9 |       value = identity(props.foo);
     | ^^^^^^^^^^^^^^
> 10 |     } catch {
     | ^^^^^^^^^^^^^^
> 11 |       el = <div value={value} />;
     | ^^^^^^^^^^^^^^
> 12 |     }
     | ^^^^^^^^^^^^^^
> 13 |   } finally {
     | ^^^^^^^^^^^^^^
> 14 |     console.log(el);
     | ^^^^^^^^^^^^^^
> 15 |   }
     | ^^^^ (BuildHIR::lowerStatement) Handle TryStatement without a catch clause
  16 |   return el;
  17 | }
  18 |
